# RisohEditor

./: .gitignore  .gitmodules  .travis.yml  AccelRes.hpp  ByteStream.hpp  CHANGELOG.txt  CHANGELOG_es.txt  CHANGELOG_id.txt  CHANGELOG_it.txt  CHANGELOG_it2.txt  CHANGELOG_ja.txt  CHANGELOG_ko.txt  CHANGELOG_pt.txt  CMakeLists.txt  ChangeLog.txt  ChangeLog_es.txt  ChangeLog_id.txt  ChangeLog_it-.txt  ChangeLog_it.txt  ChangeLog_ja.txt  ChangeLog_ko.txt  ChangeLog_pt.txt  ChangeLog_pt_BR.txt  ChangeLog_uk.txt  ConstantsDB.hpp  DialogRes.hpp  FUNDING.yml  HISTORY-ENG.txt  HISTORY-ES.txt  HISTORY-ID.txt  HISTORY-ITA.txt  HISTORY-JPN.txt  HISTORY-KOR.txt  HISTORY-PTB.txt  HISTORY.txt  HYOJUNKA.md  HYOJUNKA.txt  HowToBuild-JP.md  HowToBuild.md  IconRes.hpp  (+44 more)
.github/: copilot-instructions.md
.github/workflows/: cmake.yml  codeql-analysis.yml  codeql.yml
EGA-samples/: Censorship.ega  DeleteNonEnglish.ega  NeutralToEnglish.ega  RES_clone_by_lang.ega  RES_delete.ega  RES_select.ega  RES_set_binary.ega  RES_set_text.ega  RES_str_get.ega  RES_str_set.ega
Languages/: Korean.isl
MyWndCtrl/: CMakeLists.txt  MWindowBase.hpp  MyWndCtrl.cpp
data/: Constants.txt
data/include/: commctrl.h  windows.h  winuser.h  winver.h
data/lib/gcc/i686-w64-mingw32/10.2.0/include/: afxres.h  commctrl.h  dlgs.h  richedit.h  windef.h  winnt.h  winresrc.h  winuser.h  winver.h
data/lib/gcc/i686-w64-mingw32/6.3.0/include/: winnt.h
data/lib/gcc/i686-w64-mingw32/7.1.0/include/: commctrl.h  dlgs.h  winnt.h  winresrc.h  winuser.h  winver.h
data/lib/gcc/i686-w64-mingw32/7.2.0/include/: winuser.h
data/lib/gcc/i686-w64-mingw32/7.3.0/include/: afxres.h  windef.h  winnt.h
files/: windres-license.txt
include/: ConstantsDB.hpp  DlgInit.h  MByteStream.hpp  MFile.hpp  MIdOrString.hpp  MProcessMaker.hpp  MString.hpp  MTextToText.hpp  MacroParser.hpp  MessageRes.hpp  ResHeader.hpp  RisohSettings.hpp  UTF16_validator.h  UTF8_validator.h  pstdbool.h  pstdint.h  wondef.h  wonnt.h
mcdx/: CMakeLists.txt  FindIconv.cmake  MByteStream.hpp  MESSAGETABLEDX-NEW.md  MESSAGETABLEDX.md  MProcessMaker.hpp  MString.hpp  MacroParser.hpp  MessageRes0.hpp  README.txt  getoptwin.c  getoptwin.h  manual.md  mcdx.cpp  mcdx.i
plugins/: CMakeLists.txt  Plugin.h  PluginFramework.cpp  PluginFramework.h
plugins/Plugin1/: CMakeLists.txt  Plugin1.cpp  Plugin1.def
sample/: sample.cpp  sample.rc  sample.txt
src/: AccelRes.cpp  AccelRes.hpp  ByteStream.hpp  CMakeLists.txt  Common.hpp  ConstantsDB.hpp  DialogRes.cpp  DialogRes.hpp  DlgInit.h  DlgInitRes.cpp  DlgInitRes.hpp  EgaBridge.cpp  EgaBridge.hpp  File.cpp  File.hpp  File_inl.hpp  HISTORY-ES.txt  IconRes.cpp  IconRes.hpp  MAddBitmapDlg.hpp  MAddCtrlDlg.hpp  MAddCursorDlg.hpp  MAddIconDlg.hpp  MAddKeyDlg.hpp  MAddMItemDlg.hpp  MAddResDlg.hpp  MAddResIDDlg.hpp  MAddStrDlg.hpp  MAdviceResHDlg.hpp  MBitmapDx.cpp  MBitmapDx.hpp  MBmpView.hpp  MByteStream.hpp  MByteStreamEx.hpp  MChooseLangDlg.hpp  MCloneInNewLangDlg.hpp  MCloneInNewNameDlg.hpp  MComboBox.hpp  MComboBoxAutoComplete.hpp  MConfigDlg.hpp  (+136 more)
src/.github/: copilot-instructions.md
src/lang/: ch-CN.rc  de_DE.rc  en-US.rc  en_US.rc  es_ES.rc  fi_FI.rc  fr_FR.rc  id_ID.rc  it_IT.rc  ja-JP.rc  ja_JP.rc  ko_KR.rc  pl_PL.rc  pt_BR.rc  pt_PT.rc  ru_RU.rc  tr_TR.rc  uk_UA.rc  zh-CN.rc  zh_CN.rc  zh_TW.rc
src/res/: AniCursor_110.ani  Avi_100.avi  Cursor_101.cur  Cursor_102.cur  Emf_100.emf  Manifest_1.manifest  RT_HTML.txt  RT_MESSAGETABLE.txt  RT_STRING.txt  RT_VERSION.txt  RisohEditor_exe.manifest  bounce.ani  cursor-ns.cur  cursor-we.cur  desktop.ini
tests/: CMakeLists.txt  DialogResTest.cpp  DialogResTest_res.rc  ResTest.cpp  ResTest.exe.manifest  ResTest_res.rc  resource.h
tests/MenuTest/: CMakeLists.txt  MenuTest.cpp  MenuTest_res.rc
tests/ResTest/: ResTest.cpp  html.html
tests/ResTest2/: CMakeLists.txt  ResTest2.cpp  ResTest2_res.rc
tests/TextInclude1Test/: CMakeLists.txt  TextInclude1Test.cpp  TextInclude1Test_res.rc
tests/TextInclude1Test2/: CMakeLists.txt  TextInclude1Test2.cpp  TextInclude1Test2_res.rc  resource.h
tests/TextInclude1Test2/include/: custom_resource.h
tests/TextInclude1Test3/: CMakeLists.txt  TextInclude1Test3.cpp  TextInclude1Test3_res.rc  resource.h
tests/TextInclude1Test3/include/include/: custom_resource.h
tests/ToolbarTest/: CMakeLists.txt  ToolbarTest.cpp  ToolbarTest_res.rc  resource.h
tests/ToolbarTest/lang/: en_US.rc
tests/cmdline/: CMakeLists.txt  LICENSE.txt  cmdline.cpp
win32-samples/DialogBox/: CMakeLists.txt  DialogBox.cpp  DialogBox_res.rc  resource.h
win32-samples/DialogBox/lang/: en_US.rc
win32-samples/MainWnd/: .gitignore  CMakeLists.txt  MainWnd.cpp  MainWnd_res.rc  resource.h
win32-samples/MainWnd/lang/: en_US.rc
win32-samples/ToolbarTest/: CMakeLists.txt  ToolbarTest.cpp  ToolbarTest_res.rc  resource.h
win32-samples/ToolbarTest/lang/: en_US.rc
